@@ -13,6 +13,10 @@ config=../../share/etc/cdmWriterConfig.xml
 #config=../../share/etc/ncmlCDMConfig.xml
 #printNcML=1
 
+[qualityExtract]
+#config=../../share/etc/cdmQualityConfig.xml
+#autoConfString=all # lowest|highest
+
 [extract]
 removeVariable=relative_humidity
 
